fixed description align

--- a/responsive-recipe/styles.css
+++ b/responsive-recipe/styles.css
@@ -14,7 +14,7 @@ header h1 {
 }
 
 header p {
-    text-align: right;
+    text-align: left;
     position: reseponsive;
 }
 
